<resources>
    <string name="app_name">Thermostat</string>
    <string name="settings">Settings</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="description">description</string>
    <string name="temp">temp</string>
    <string name="icon">icon</string>
    <string name="date">date</string>
    <string name="city">city</string>
    <string name="settings_header">Settings</string>
    <string name="go_home">Home</string>
    <string name="date_time">Date/Time</string>
    <string name="s_temperature">Temperature</string>
    <string name="s_schedules">Schedules</string>
    <string name="back"><![CDATA[<- Back]]></string>
    <string name="schedules">Schedules</string>
</resources>
