<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:background="#000000"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/city_field"
            style="@style/text_medium"
            android:text="@string/city" />

        <TextView
            android:id="@+id/updated_field"
            style="@style/text_small"
            android:text="@string/date" />

        <TextView
            android:id="@+id/weather_icon"
            style="@style/icon1"
            android:text="@string/icon" />

        <TextView
            android:id="@+id/current_temperature_field"
            style="@style/text_medium"
            android:text="@string/temp" />


        <TextView
            android:id="@+id/details_field"
            style="@style/text_small"
            android:text="@string/description" />

        <TextView
            android:id="@+id/humidity_field"
            style="@style/text_small"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/pressure_field"
            style="@style/text_small"
            android:text="@string/pressure" />


    </LinearLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</android.support.constraint.ConstraintLayout>
