<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.android.thermostat.SettingsActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/set_header"
        style="@style/icon1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonHandler"
        android:text="@string/settings_header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.06" />

    <Button
        android:id="@+id/but_set_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="buttonHandler"
        android:padding="10dp"
        android:text="@string/go_home"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/but_set_sched" />

    <Button
        android:id="@+id/but_set2"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:onClick="buttonHandler"
        android:padding="10dp"
        android:text="@string/date_time"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/but_set4"
        app:layout_constraintLeft_toRightOf="@+id/but_set4"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/but_set_sched"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonHandler"
        android:padding="10dp"
        android:text="@string/s_schedules"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/but_set_home"
        app:layout_constraintLeft_toRightOf="@+id/but_set_home"
        app:layout_constraintRight_toLeftOf="@+id/but_set4" />

    <Button
        android:id="@+id/but_set4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="buttonHandler"
        android:padding="10dp"
        android:text="@string/s_temperature"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/but_set_sched"
        app:layout_constraintLeft_toRightOf="@+id/but_set_sched"
        app:layout_constraintRight_toLeftOf="@+id/but_set2" />


</android.support.constraint.ConstraintLayout>
